# scratchpad

./: .gitignore  Makefile  README.md  build_and_test.sh  scratchpad-live.js
cpp/: CMakeLists.txt  IMPLEMENTATION_STATUS.md  README.md
cpp/cmake/: dependencies.cmake  scratchpadConfig.cmake.in
cpp/examples/: CMakeLists.txt  async_operations.cpp  basic_usage.cpp
cpp/include/scratchpad/: errors.hpp  image_manager.hpp  resource_manager.hpp  types.hpp  vm_manager.hpp
cpp/include/scratchpad/config/: configuration.hpp
cpp/include/scratchpad/domain/communication/: ssh_connection.hpp
cpp/include/scratchpad/domain/process/: qemu_process.hpp
cpp/include/scratchpad/domain/vm/: virtual_machine.hpp  vm_configuration.hpp  vm_id.hpp
cpp/include/scratchpad/infrastructure/qemu/: qemu_adapter.hpp
cpp/include/scratchpad/infrastructure/ssh/: ssh_client.hpp
cpp/src/cli/: CMakeLists.txt  main.cpp  scratchpad_cli.cpp  scratchpad_cli.hpp
cpp/src/lib/: CMakeLists.txt  errors_impl.cpp  service_factory.cpp  service_factory.hpp  types_impl.cpp  types_minimal.cpp
cpp/src/lib/application/: image_manager_impl.cpp  image_manager_impl.hpp  resource_manager_impl.cpp  resource_manager_impl.hpp  vm_manager_impl.cpp  vm_manager_impl.hpp
cpp/src/lib/config/: configuration.cpp
cpp/src/lib/domain/communication/: command_execution.cpp  command_execution.hpp  ssh_connection.cpp
cpp/src/lib/domain/process/: qemu_process.cpp  qemu_process.hpp
cpp/src/lib/domain/vm/: virtual_machine.cpp  virtual_machine.hpp  vm_configuration.cpp  vm_configuration.hpp  vm_id.cpp  vm_id.hpp
cpp/src/lib/infrastructure/qemu/: qemu_adapter.cpp  qemu_adapter.hpp
cpp/src/lib/infrastructure/ssh/: ssh_client.cpp  ssh_client.hpp
cpp/src/lib/logging/: logger.cpp  logger.hpp
cpp/tests/: CMakeLists.txt  README.md
cpp/tests/unit/: CMakeLists.txt  simple_test.cpp
cpp/tests/unit/application/: CMakeLists.txt  test_image_manager.cpp  test_resource_manager.cpp  test_vm_manager.cpp
cpp/tests/unit/domain/: CMakeLists.txt  test_command_execution.cpp  test_configuration.cpp  test_errors.cpp  test_qemu_process.cpp  test_ssh_connection.cpp  test_virtual_machine.cpp  test_vm_configuration.cpp  test_vm_id.cpp
cpp/tests/unit/infrastructure/: CMakeLists.txt  test_qemu_adapter.cpp  test_ssh_client.cpp
cpp/tests/utils/: mock_qemu_adapter.cpp  mock_qemu_adapter.hpp  mock_ssh_client.cpp  mock_ssh_client.hpp  temp_directory.cpp  test_helpers.cpp  test_helpers.hpp
spec/: design.md
